# MagtextureSymmetry

./: LICENSE.md  README.md  lattice.json  pyproject.toml  visualize_texture.py
scripts/: lattice.json
spintext/: __init__.py  plotting.py  symmetry.py  texture.py
tests/: test_spintext.py
