[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spintext"
version = "0.1.0"
description = "Symmetry analysis and visualization of localized spin textures."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Hendrik Schrautzer" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
spintext-visualize = "scripts.visualize_texture:main"

[tool.setuptools]
packages = ["spintext"]

[tool.pytest.ini_options]
testpaths = ["tests"]